# Casemind-Worker

./: .gitignore  README.md  index.html  loadtest-mqtt.mjs  package-lock.json  package.json  test-mqtt.mjs
.github/workflows/: release.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  dbf.rs  exe_runner.rs  lib.rs  main.rs  mqtt.rs  worker.rs
src-tauri/tests/: poc_exe.rs
src/lib/: MqttTest.svelte  Settings.svelte  TaskLog.svelte  WorkerStatus.svelte
