[package]
name = "casemind-worker"
version = "0.1.0"
description = "CaseMind DRG Grouper Worker Agent"
authors = ["aegisx"]
edition = "2021"

[lib]
name = "casemind_worker_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "casemind-worker"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
rumqttc = "0.24"
dbase = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
zip = "2"
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
